Error fix for mapping product DTOs